# INDE577-Spring-2026

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-tests.yml
examples/: README.md
examples/supervised_learning/: README.md  linear_regression.ipynb  logistic_regression.ipynb  multilayer_perceptron_example.ipynb  perceptron_example.ipynb
examples/supervised_learning/Decision Tree/: README.md  decision_tree_example.ipynb
examples/supervised_learning/Ensemble Methods/: README.md  ensemble_methods_example.ipynb
examples/supervised_learning/Gradient Descent/: README.md  gradient_descent_example.ipynb
examples/supervised_learning/KNN/: README.md  knn_example.ipynb
examples/supervised_learning/Linear Regression/: README.md  linear_regression_example.ipynb
examples/supervised_learning/Logistic Regression/: README.md  logistic_regression_example.ipynb
examples/supervised_learning/Multilayer Perceptron/: README.md  multilayer_perceptron_example.ipynb
examples/supervised_learning/Perceptron/: README.md  perceptron_example.ipynb
examples/unsupervised_learning/: README.md  pca_example.ipynb
src/: README.md
src/rice_ml/: __init__.py
tests/: test_community_detection.py  test_dbscan.py  test_decision_tree.py  test_distance_metrics.py  test_ensemble_methods.py  test_gradient_descent.py  test_k_means_clustering.py  test_knn.py  test_linear_regression.py  test_logistic_regression.py  test_multilayer_perceptron.py  test_pca.py  test_perceptron.py  test_post_processing.py  test_pre_processing.py  test_regression_trees.py
(+31 files in other folders)
