[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rice_ml"
version = "0.1.0"
description = "Rice ML package"
authors = [
    { name = "Thomas Duong" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8"
]
test = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
